ingress/resources/staging/gitops-e2e-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-e2e-ingress
  namespace: staging
spec:
  ingressClassName: nginx
  rules:
    - host: gitops-staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
